--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Moikkaralla heippahei</h1>
+    <h1>Anna pankkitunnuksesi. Tämä on turvallista.</h1>
+
+    <form>
+      <div class="form-group">
+          <label for="name">Nimi:</label>
+          <input type="text" class="form-control" id="name">
+      </div>
+      <div class="form-group">
+          <label for="pin">Pin koodi:</label>
+          <input type="password" class="form-control" id="pin">
+      </div>
+      <button type="button" class="btn btn-info">Lähetä</button>
+    </form>
+
+
 
   </body>
 </html>
