--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     </form>
   </div>
 
+  <button onclick="haePankkitiedot();" type="button" class="btn btn-info">Täälä ei ole mitään</button>
 
   </body>
 </html>
