--- a/public/index.html
+++ b/public/index.html
@@ -2,41 +2,62 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Black belttien karttaprojekti 2020</title>
+    <link rel="icon" href="https://storage.needpix.com/rsynced_images/icon-2073971_1280.png">
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
 
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+   <!-- Make sure you put this AFTER Leaflet's CSS -->
+   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   <!-- Latest compiled and minified CSS -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <script src="js/pankkitiedot.js"></script>
+   <!-- jQuery library -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+   <!-- Popper JS -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+   <!-- Latest compiled JavaScript -->
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+
+   <link rel="stylesheet" href="css/kartat.css">
+   <script src="js/kartat.js"></script>
 
   </head>
-  <body>
-    <div class="container">
-    <h1>Anna pankkitunnuksesi. Tämä on turvallista.</h1>
 
-    <form>
+
+  <body onload="valmista()">
+
+  <div class="otsikkoalue">
+      <h1 class="otsikkoteksti">Suvi Maps 2021</h1>
+  </div>
+
+  <div class="kartta_nappi_yhdistelma">
+      <div id="kartta"></div>
+      <!--<button class="tallenna_nappi" type="button" name="button">Tallenna sijainti</button>-->
+      <input onclick="tallenna_sijainti()" type="button" value="TS" class="tallenna_nappi leaflet-control" />
+  </div>
+
+  <div id="arvostelulomake">
+    <form class="form-inline">
       <div class="form-group">
-          <label for="name">Nimi:</label>
-          <input type="text" class="form-control" id="name">
+          <label for="paikka">Paikka:</label>
+          <input type="text" class="form-control" id="paikka">
       </div>
+
       <div class="form-group">
-          <label for="pin">Pin koodi:</label>
-          <input type="password" class="form-control" id="pin">
+          <label for="arvostelu">Arvostelu:</label>
+          <input type="text" class="form-control" id="arvostelu">
+          <button onclick="kirjoita_kartalle()" type="button" class="ok_nappi">OK</button>
       </div>
-      <button onclick="laheta_pankkitiedot();" type="button" class="btn btn-info">Lähetä</button>
+      <!--<button type="button" class="ok_nappi">OK</button>-->
     </form>
   </div>
 
-  <button onclick="haePankkitiedot();" type="button" class="btn btn-info">Täälä ei ole mitään</button>
 
   </body>
 </html>
