taulukko ja herokuun

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <div class="otsikkoalue">
       <h1 class="otsikkoteksti">Suvi Maps 2021</h1>
   </div>
+  <p>Jos ei toimi, paina sift + kierula</p>
 
   <div class="row">
 
@@ -68,23 +69,14 @@
     </div>
 
     <div class="col-sm-4">
-      <table class="table table-striped">
+      <table id="paikkataulukko" class="table table-striped">
         <tbody>
           <tr>
             <th>Paikka</th>
             <th>Arvostelu</th>
             <th>Arvostelija</th>
           </tr>
-          <tr>
-            <td>Lepaa</td>
-            <td>En ole käynyt</td>
-            <td>Suvi</td>
-          </tr>
-          <tr>
-            <td>Pori</td>
-            <td>Yyteri on mahtava</td>
-            <td>Suvi taas</td>
-          </tr>
+
         </tbody>
       </table>
     </div>
